Updaing file stucture

--- a/03.group-chat-message-socket.io-logic/public/index.html
+++ b/03.group-chat-message-socket.io-logic/public/index.html
@@ -11,7 +11,7 @@
     <div class='main_container'>
         <div class='introduction_page'>
             <div class='introduction_page_box'>
-                <input class='introduction_page_name_input' placeholder="Enter your name.." required></input>
+                <input class='introduction_page_name_input' placeholder="Enter your name.."></input>
                 <select class='introduction_page_room_select' id='room_select'>
                     <option value='cars'>Cars</option>
                     <option value='motorbikes'>Motorbikes</option>
